--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_homepage"
+    android:background="@drawable/hoem_page"
     tools:context=".homepage_Activity">
 
     <RelativeLayout
@@ -116,9 +116,10 @@
             android:layout_marginTop="40dp"
             android:columnCount="2"
             android:padding="10dp"
-            android:rowCount="2" >
+            android:rowCount="2">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/crv_lhp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="0"
@@ -130,10 +131,10 @@
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 app:cardBackgroundColor="#7DF7FF"
-                app:cardCornerRadius="25dp"
-                >
+                app:cardCornerRadius="25dp">
 
                 <LinearLayout
+                    android:id="@+id/btn_lhp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/border"
