--- a/app/src/main/res/layout/activity_lop_hoc_phan.xml
+++ b/app/src/main/res/layout/activity_lop_hoc_phan.xml
@@ -48,10 +48,11 @@
             android:id="@+id/expand_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="none"
-            android:dividerHeight="0dp"
             android:divider="?attr/selectableItemBackgroundBorderless"
-            />
+            android:dividerHeight="0dp"
+            android:groupIndicator="@null"
+            android:paddingBottom="10dp"
+            android:scrollbars="none" />
 
 
     </RelativeLayout>
