--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="30dp"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="15dp"
         app:cardCornerRadius="15dp">
 
@@ -26,6 +27,15 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:src="@drawable/book_open" />
+
+            <ImageView
+                android:id="@+id/ivGroupIndicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/group_indicator"
+                android:layout_marginRight="20dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"/>
 
             <TextView
                 android:id="@+id/txtView"
