--- a/app/src/main/res/layout/layout_item.xml
+++ b/app/src/main/res/layout/layout_item.xml
@@ -11,7 +11,9 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="15dp"
-        app:cardCornerRadius="15dp">
+        app:cardCornerRadius="15dp"
+        app:cardElevation="4dp"
+        android:layout_centerVertical="true">
 
         <RelativeLayout
             android:layout_width="290dp"
@@ -30,8 +32,8 @@
                     android:id="@+id/item_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                   android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_centerVertical="true"
                     android:text="Học phần đại cương"
                     android:textColor="#000"
                     android:textSize="14sp"
@@ -42,8 +44,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="5dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="15dp"
                     android:text="Xem chi tiết"
                     android:textColor="#000"
                     android:textSize="12sp"
