--- a/app/src/main/res/layout/activity_mic_login.xml
+++ b/app/src/main/res/layout/activity_mic_login.xml
@@ -53,6 +53,7 @@
             android:textColor="@color/bluebutton"
             android:layout_marginRight="50dp"/>
         <Button
+            android:id="@+id/btn_micLogin"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="Login with Office 365"
