--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -173,6 +173,7 @@
                 app:cardElevation="8dp">
 
                 <LinearLayout
+                    android:id="@+id/btn_tkb"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/border"
@@ -212,6 +213,7 @@
                 app:cardElevation="10dp">
 
                 <LinearLayout
+                    android:id="@+id/btn_ketqua"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/border"
@@ -251,6 +253,7 @@
                 app:cardElevation="10dp">
 
                 <LinearLayout
+                    android:id="@+id/btn_lichthi"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/border"
