--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -72,9 +72,9 @@
         android:id="@+id/layout_scroll_body"
         android:layout_width="match_parent"
         android:layout_height="600dp"
-        android:layout_marginBottom="10dp"
         android:layout_above="@+id/layout_bottom"
-        android:layout_below="@+id/text_thongbao">
+        android:layout_below="@+id/text_thongbao"
+        android:layout_marginBottom="10dp">
 
         <LinearLayout
             android:id="@+id/layout_linearbody"
