--- a/app/src/main/res/layout/activity_tkb.xml
+++ b/app/src/main/res/layout/activity_tkb.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/hoem_page">
+    android:background="@drawable/hoem_page"
+
+    >
 
     <RelativeLayout
         android:id="@+id/layout_header"
@@ -62,10 +64,7 @@
                     android:text="T2"
                     android:textColor="@color/light_font"
                     android:textSize="24dp"
-                    android:textStyle="bold">
-
-                </TextView>
-
+                    android:textStyle="bold"></TextView>
             </RelativeLayout>
 
             <RelativeLayout
@@ -81,11 +80,7 @@
                     android:text="T3"
                     android:textColor="@color/light_font"
                     android:textSize="24dp"
-                    android:textStyle="bold">
-
-                </TextView>
-
-
+                    android:textStyle="bold"></TextView>
             </RelativeLayout>
 
             <RelativeLayout
@@ -97,16 +92,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
+                    android:layout_centerInParent="true"
                     android:text="T4"
                     android:textColor="@color/light_font"
                     android:textSize="24dp"
-                    android:textStyle="bold">
-
-                </TextView>
-
-
+                    android:textStyle="bold"></TextView>
             </RelativeLayout>
 
             <RelativeLayout
@@ -118,16 +108,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
+                    android:layout_centerInParent="true"
                     android:text="T5"
                     android:textColor="@color/light_font"
                     android:textSize="24dp"
-                    android:textStyle="bold">
-
-                </TextView>
-
-
+                    android:textStyle="bold"></TextView>
             </RelativeLayout>
 
             <RelativeLayout
@@ -139,16 +124,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
+                    android:layout_centerInParent="true"
                     android:text="T6"
                     android:textColor="@color/light_font"
                     android:textSize="24dp"
                     android:textStyle="bold">
 
                 </TextView>
-
-
             </RelativeLayout>
 
             <RelativeLayout
@@ -160,19 +142,14 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
+                    android:layout_centerInParent="true"
                     android:text="T7"
                     android:textColor="@color/light_font"
                     android:textSize="24dp"
                     android:textStyle="bold">
 
-
                 </TextView>
-
-
             </RelativeLayout>
-
 
             <RelativeLayout
                 android:layout_width="50dp"
@@ -183,18 +160,14 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
+                    android:layout_centerInParent="true"
                     android:text="CN"
                     android:textColor="@color/light_font"
                     android:textSize="24dp"
                     android:textStyle="bold">
 
                 </TextView>
-
             </RelativeLayout>
-
-
         </LinearLayout>
 
         <RelativeLayout
@@ -228,11 +201,13 @@
                         android:src="@drawable/next" />
 
                     <TextView
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
                         android:fontFamily="@font/roboto_bold"
-                        android:text="7:00  AM "
+                        android:text="7:00 AM   /P107"
+
                         android:textColor="@color/black"
                         android:textSize="20dp" />
 
@@ -241,7 +216,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
                         android:layout_marginTop="30dp"
-                        android:fontFamily="@font/roboto_light"
+                        android:fontFamily="@font/roboto_bold"
                         android:text="Lập trình trên điện thoại di động ..."
                         android:textColor="@color/black"
                         android:textSize="18dp" />
@@ -284,7 +259,7 @@
                         android:layout_marginLeft="20dp"
                         android:layout_marginTop="10dp"
                         android:fontFamily="@font/roboto_bold"
-                        android:text="9:00 AM"
+                        android:text="9:00 AM   /P107"
                         android:textColor="@color/black"
                         android:textSize="20dp" />
 
@@ -293,8 +268,117 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
                         android:layout_marginTop="35dp"
-                        android:fontFamily="@font/roboto_light"
+                        android:fontFamily="@font/roboto_bold"
                         android:text="Thiết kế giao diện người dùng"
+                        android:textColor="@color/black"
+                        android:textSize="18dp" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/t3"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@id/t2">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardCornerRadius="10dp">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rec_cardview">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="10dp"
+                        android:src="@drawable/next" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:fontFamily="@font/roboto_bold"
+                        android:text="13:00 PM   /P108"
+                        android:textColor="@color/black"
+                        android:textSize="20dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="35dp"
+                        android:fontFamily="@font/roboto_bold"
+                        android:text="Công nghệ "
+                        android:textColor="@color/black"
+                        android:textSize="18dp" />
+                    XML
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/t4"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@id/t3">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardCornerRadius="10dp">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rec_cardview">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="10dp"
+                        android:src="@drawable/next" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:fontFamily="@font/roboto_bold"
+                        android:text="15:00 PM   /P204"
+                        android:textColor="@color/black"
+                        android:textSize="20dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="35dp"
+                        android:fontFamily="@font/roboto_bold"
+                        android:text="Quảng trị mạng  "
                         android:textColor="@color/black"
                         android:textSize="18dp" />
 
@@ -302,6 +386,58 @@
             </androidx.cardview.widget.CardView>
 
 
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/t5"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@id/t4">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardCornerRadius="10dp">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rec_cardview">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="10dp"
+                        android:src="@drawable/next" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:fontFamily="@font/roboto_bold"
+                        android:text="19:00 PM   /PTH01"
+                        android:textColor="@color/black"
+                        android:textSize="20dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="35dp"
+                        android:fontFamily="@font/roboto_bold"
+                        android:text="Thực hành XML"
+                        android:textColor="@color/black"
+                        android:textSize="18dp" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
         </RelativeLayout>
 
     </RelativeLayout>
@@ -333,9 +469,7 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/thongbao"
             tools:ignore="SpeakableTextPresentCheck">
-
         </ImageButton>
-
         <ImageButton
             android:id="@+id/button_chatbox"
             android:layout_width="0dp"
@@ -344,9 +478,7 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/chat"
             tools:ignore="SpeakableTextPresentCheck">
-
         </ImageButton>
-
         <ImageButton
             android:id="@+id/button_student"
             android:layout_width="0dp"
