--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -95,6 +95,7 @@
                 app:cardCornerRadius="10dp">
 
                 <RelativeLayout
+                    android:id="@+id/btn_noti_details"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rec_cardview">
@@ -142,6 +143,7 @@
                 app:cardCornerRadius="10dp">
 
                 <RelativeLayout
+                    android:id="@+id/btn_class_details"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rec_cardview">
@@ -188,11 +190,13 @@
                 app:cardCornerRadius="10dp">
 
                 <RelativeLayout
+                    android:id="@+id/btn_pdt_details"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rec_cardview">
 
                     <ImageView
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
