--- a/app/src/main/res/layout/line_chatbox.xml
+++ b/app/src/main/res/layout/line_chatbox.xml
@@ -22,22 +22,22 @@
         android:src="@drawable/next" />
 
     <TextView
-        android:id="@+id/text_name"
+        android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
+        android:layout_toRightOf="@+id/img_student"
         android:fontFamily="@font/nunito_bold"
-        android:textSize="20dp"
-        android:textColor="@color/black"
         android:text="Tên"
-        android:layout_toRightOf="@+id/img_student"/>
+        android:textColor="@color/black"
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/text_noidung"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text_name"
+        android:layout_below="@+id/user_name"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="2dp"
         android:layout_toRightOf="@+id/img_student"
