--- a/app/src/main/res/layout/activity_tkb.xml
+++ b/app/src/main/res/layout/activity_tkb.xml
@@ -54,6 +54,7 @@
             android:padding="8dp">
 
             <RelativeLayout
+                android:id="@+id/btn_t2"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/boderday">
@@ -69,6 +70,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/btn_t3"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="8dp"
@@ -85,6 +87,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/btn_t4"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="8dp"
@@ -172,279 +175,17 @@
         </LinearLayout>
 
         <RelativeLayout
-            android:id="@+id/t1"
+            android:id="@+id/fragment_layout"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_below="@id/day">
+            android:layout_height="match_parent"
+            android:layout_below="@+id/day">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                app:cardCornerRadius="10dp">
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/rec_cardview">
-
-                    <ImageView
-                        android:id="@+id/detail_noti"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="10dp"
-                        android:src="@drawable/next" />
-
-                    <TextView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="7:00 AM   /P107"
-
-                        android:textColor="@color/black"
-                        android:textSize="20dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="30dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="Lập trình trên điện thoại di động ..."
-                        android:textColor="@color/black"
-                        android:textSize="18dp" />
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/t2"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_below="@id/t1">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                app:cardCornerRadius="10dp">
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/rec_cardview">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="10dp"
-                        android:src="@drawable/next" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="10dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="9:00 AM   /P107"
-                        android:textColor="@color/black"
-                        android:textSize="20dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="35dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="Thiết kế giao diện người dùng"
-                        android:textColor="@color/black"
-                        android:textSize="18dp" />
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
-
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/t3"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_below="@id/t2">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                app:cardCornerRadius="10dp">
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/rec_cardview">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="10dp"
-                        android:src="@drawable/next" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="10dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="13:00 PM   /P108"
-                        android:textColor="@color/black"
-                        android:textSize="20dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="35dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="Công nghệ "
-                        android:textColor="@color/black"
-                        android:textSize="18dp" />
-                    XML
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
-
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/t4"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_below="@id/t3">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                app:cardCornerRadius="10dp">
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/rec_cardview">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="10dp"
-                        android:src="@drawable/next" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="10dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="15:00 PM   /P204"
-                        android:textColor="@color/black"
-                        android:textSize="20dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="35dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="Quảng trị mạng  "
-                        android:textColor="@color/black"
-                        android:textSize="18dp" />
-
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
-
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/t5"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_below="@id/t4">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                app:cardCornerRadius="10dp">
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/rec_cardview">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="10dp"
-                        android:src="@drawable/next" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="10dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="19:00 PM   /PTH01"
-                        android:textColor="@color/black"
-                        android:textSize="20dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="35dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="Thực hành XML"
-                        android:textColor="@color/black"
-                        android:textSize="18dp" />
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
         </RelativeLayout>
 
     </RelativeLayout>
     <LinearLayout
         android:id="@+id/layout_bottom"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/bottom_rec"
