--- a/app/src/main/res/layout/chatbox.xml
+++ b/app/src/main/res/layout/chatbox.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_homepage"
     tools:context=".homepage_Activity">
+
     <RelativeLayout
         android:id="@+id/layout_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/head_rectangle">
 
         <TextView
@@ -73,7 +75,7 @@
 
     <LinearLayout
         android:id="@+id/layout_bottom"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/bottom_rec"
