--- a/app/src/main/res/layout/chatbox_details.xml
+++ b/app/src/main/res/layout/chatbox_details.xml
@@ -9,6 +9,7 @@
 
     <RelativeLayout
         android:id="@+id/layout_header"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/head_rectangle">
@@ -66,7 +67,7 @@
 
         <RelativeLayout
             android:id="@+id/layout_name_chatbox"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
@@ -81,6 +82,7 @@
                 android:layout_marginLeft="10dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:src="@drawable/pre_white" />
+
             <ImageView
                 android:id="@+id/student_img"
                 android:layout_width="47dp"
@@ -150,7 +152,7 @@
 
     <LinearLayout
         android:id="@+id/layout_bottom"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/bottom_rec"
