--- a/app/src/main/res/layout/activity_lichthi.xml
+++ b/app/src/main/res/layout/activity_lichthi.xml
@@ -293,12 +293,8 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="35dp"
-            android:layout_marginEnd="142dp"
-            android:layout_marginBottom="30dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:text="LỊCH THI "
             android:textColor="#FFFFFF"
             android:textSize="26sp"
