--- a/app/src/main/res/drawable/menu_kq.xml
+++ b/app/src/main/res/drawable/menu_kq.xml
@@ -7,6 +7,7 @@
                     <solid android:color="#2196F3"/>
 
                     <padding android:right="10dp"/>
+                    <corners android:radius="10dp"/>
                 </shape>
             </item>
 
