--- a/app/src/main/res/layout/activity_ketqua.xml
+++ b/app/src/main/res/layout/activity_ketqua.xml
@@ -47,7 +47,6 @@
             android:id="@+id/spinner1"
             android:layout_width="155dp"
             android:layout_height="match_parent"
-
             android:background="@drawable/menu_kq"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +76,6 @@
             android:id="@+id/spinner2"
             android:layout_width="135dp"
             android:layout_height="match_parent"
-
             android:background="#FFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +83,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.204"
-
             tools:ignore="MissingConstraints" />
 
     </RelativeLayout>
@@ -147,7 +144,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:text="Msv: 1911505310205"
         android:textColor="#000000"
@@ -189,22 +186,22 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="24dp"
+        android:gravity="center_horizontal"
         android:text="CHI TIẾT KẾT QUẢ"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <ExpandableListView
         android:id="@+id/expandableListView"
         android:layout_width="match_parent"
         android:layout_height="280dp"
+        android:groupIndicator="@null"
         android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <RelativeLayout
@@ -217,12 +214,8 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="80dp"
-            android:layout_marginBottom="33dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
             android:text="KẾT QUẢ HỌC TẬP "
             android:textColor="#FFFFFF"
             android:textSize="26sp"
