--- a/app/src/main/res/layout/style_spiner.xml
+++ b/app/src/main/res/layout/style_spiner.xml
@@ -3,6 +3,7 @@
     android:layout_width="200dp"
 
     android:layout_height="match_parent"
+    android:textColor="@color/black"
     android:padding="10dp"
     android:paddingStart="13dp"
     android:paddingRight="5dp"
