--- a/app/src/main/res/layout/chatbox.xml
+++ b/app/src/main/res/layout/chatbox.xml
@@ -60,16 +60,28 @@
 
 
     <ListView
-        android:layout_below="@id/layout_header"
-        android:layout_above="@+id/layout_bottom"
-        android:layout_marginTop="20dp"
         android:id="@+id/listviewStudent"
-        android:layout_marginHorizontal="15dp"
         android:layout_width="match_parent"
         android:layout_height="729dp"
+        android:layout_above="@+id/layout_bottom"
+        android:layout_below="@id/layout_header"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="20dp"
         android:divider="@android:color/transparent"
-        android:dividerHeight="15.0sp"
-   />
+        android:dividerHeight="15.0sp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/newChat"
+        android:src="@drawable/ic_add"
+        android:background="@color/teal_200"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/layout_bottom"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
+
+        />
 
 
 
