--- a/app/src/main/res/layout/chatbox_details.xml
+++ b/app/src/main/res/layout/chatbox_details.xml
@@ -112,7 +112,8 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/layout_send_message"
             android:layout_below="@+id/layout_name_chatbox"
-            android:layout_marginBottom="5dp">
+            android:layout_marginBottom="5dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
 
         </androidx.recyclerview.widget.RecyclerView>
 
