--- a/app/src/main/res/layout/chat_item_receive.xml
+++ b/app/src/main/res/layout/chat_item_receive.xml
@@ -26,6 +26,18 @@
             android:textSize="15dp"
 
             />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_timeMessageReceive"
+            android:layout_below="@id/receive_message"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:padding="5dp"
+            android:text="12.10"
+            android:layout_marginRight="15dp"
+            android:textSize="10dp"
+            />
 
     </RelativeLayout>
 
