--- a/app/src/main/res/layout/chatbox.xml
+++ b/app/src/main/res/layout/chatbox.xml
@@ -58,28 +58,39 @@
             />
     </RelativeLayout>
 
-
-    <ListView
-        android:id="@+id/listviewStudent"
+    <FrameLayout
+        android:id="@+id/frameListChat"
         android:layout_width="match_parent"
         android:layout_height="729dp"
         android:layout_above="@+id/layout_bottom"
         android:layout_below="@id/layout_header"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="20dp"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="15.0sp" />
+        >
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recListChat"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="true"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="15.0sp"
+            android:overScrollMode="never"
+            android:visibility="gone"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            />
+    </FrameLayout>
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/newChat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/newChat"
-        android:src="@drawable/ic_add"
-        android:background="@color/teal_200"
-        android:layout_alignParentEnd="true"
         android:layout_above="@+id/layout_bottom"
-        android:layout_marginBottom="20dp"
+        android:layout_alignParentEnd="true"
         android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@color/teal_200"
+        android:src="@drawable/ic_add"
 
         />
 
