--- a/app/src/main/res/layout/chatbox_details.xml
+++ b/app/src/main/res/layout/chatbox_details.xml
@@ -113,6 +113,7 @@
             android:layout_above="@+id/layout_send_message"
             android:layout_below="@+id/layout_name_chatbox"
             android:layout_marginBottom="5dp"
+            app:stackFromEnd="true"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
 
         </androidx.recyclerview.widget.RecyclerView>
