--- a/app/src/main/res/layout/line_chatbox.xml
+++ b/app/src/main/res/layout/line_chatbox.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/MainlineChatbox"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/rec_cardview"
     android:layout_marginBottom="10dp">
 
@@ -9,8 +10,7 @@
         android:id="@+id/img_student"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_centerVertical="true"/>
+        android:layout_marginLeft="10dp" />
 
     <ImageView
         android:id="@+id/btn_chatbox_details"
