--- a/app/src/main/res/layout/notification_details.xml
+++ b/app/src/main/res/layout/notification_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_homepage"
-    tools:context=".notification_details_Activity">
+    tools:context=".NotificationModule.notification_details_Activity">
 
     <RelativeLayout
         android:id="@+id/layout_header"
