--- a/app/src/main/res/layout/activity_tkb.xml
+++ b/app/src/main/res/layout/activity_tkb.xml
@@ -172,19 +172,22 @@
             </RelativeLayout>
         </LinearLayout>
 
-        <RelativeLayout
+        <FrameLayout
             android:id="@+id/fragment_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/day">
-            <ListView
-                android:id="@+id/listviewTKB"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-            >
 
-            </ListView>
-        </RelativeLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/listviewTKB"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="true"
+                android:overScrollMode="never"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                />
+
+        </FrameLayout>
 
     </RelativeLayout>
     <LinearLayout
